--- a/kodekloud/templates/hpa.yaml
+++ b/kodekloud/templates/hpa.yaml
@@ -2,14 +2,14 @@
 apiVersion: autoscaling/v2beta1
 kind: HorizontalPodAutoscaler
 metadata:
-  name: {{ include "apache.fullname" . }}
+  name: {{ include "kodekloud.fullname" . }}
   labels:
-    {{- include "apache.labels" . | nindent 4 }}
+    {{- include "kodekloud.labels" . | nindent 4 }}
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
-    name: {{ include "apache.fullname" . }}
+    name: {{ include "kodekloud.fullname" . }}
   minReplicas: {{ .Values.autoscaling.minReplicas }}
   maxReplicas: {{ .Values.autoscaling.maxReplicas }}
   metrics:
