--- a/kodekloud/templates/serviceaccount.yaml
+++ b/kodekloud/templates/serviceaccount.yaml
@@ -2,9 +2,9 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "apache.serviceAccountName" . }}
+  name: {{ include "kodekloud.serviceAccountName" . }}
   labels:
-    {{- include "apache.labels" . | nindent 4 }}
+    {{- include "kodekloud.labels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
