--- a/kodekloud/values.yaml
+++ b/kodekloud/values.yaml
@@ -1,14 +1,14 @@
-# Default values for apache.
+# Default values for kodekloud.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
 replicaCount: 1
 
 image:
-  repository: kodekloud/ecs-project2
+  repository: kodekloud/ecs-project1
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  tag: ""
+  tag: "latest"
 
 imagePullSecrets: []
 nameOverride: ""
@@ -37,8 +37,8 @@ securityContext: {}
   # runAsUser: 1000
 
 service:
-  type: LoadBalncer
-  port: 8080
+  type: LoadBalancer
+  port: 3000
 
 ingress:
   enabled: false
